Corrected Project-Name Spacing For Secondary-Project-Right

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,10 +82,6 @@ body {
 
 }
 
-.column-right {
-    /* margin-left: 14px; */
-}
-
 .contact {
     display: flex;
 }
@@ -106,7 +102,7 @@ body {
     width: 80%;
 }
 
-.primary-project {
+.primary-project a {
     position: relative;
 }
 
@@ -118,24 +114,26 @@ body {
     width: 75%;
 }
 
-.primary-project img {
+.primary-project a img {
     border: 1px solid;
     height: 50%;
     width: 100%;
     border-radius: 15px;
     margin-bottom: 1%;
+    aspect-ratio: 3 /2;
 }
 
-.secondary-project-left img, .secondary-project-right img {
+.secondary-project-left a img, .secondary-project-right a img {
     border: 1px solid;
-    height: auto;
+    height: 20%;
     width: 98%;
     border-radius: 10px;
     margin-top: 2%;
     margin-bottom: 2%;
+    aspect-ratio: 3 /2;
 }
 
-.secondary-project-right img {
+.secondary-project-right a img {
     margin-left: 2%;
 }
 
@@ -149,6 +147,10 @@ body {
     margin: 0 0 0 -5px;
     padding: 0 10px;
     border-radius: 10px;
+}
+
+.secondary-project-right .project-name {
+    margin-left: 1%;
 }
 
 .project-name h4 {
